<resources>
    <string name="app_name">Crucial Emergency Response</string>
    <string name="dashboard_tag_line">Crucial emergency response organization is a team of skilled emergency respondants with the aim of providing roadside emergency assistance in a quick and efficient manner </string>
    <string name="onboarding_mechanic_title">Mechanics Available</string>
    <string name="onboarding_mechanic_description">A large number of mechanics available at your service wherever you might be in the country</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="dashboard_logo">dashboard logo</string>
    <string name="mechanics">Mechanics</string>
    <string name="mechanic_illustration">mechanic illustration</string>
    <string name="tow_truck_illustration">Tow truck illustration</string>
    <string name="tow_trucks">Tow Trucks</string>
    <string name="fuel_station_illustration">Fuel Station Illustration</string>
    <string name="fuel_stations">Fuel Stations</string>
    <string name="ambulance_illustration">Ambulance Illustration</string>
    <string name="ambulances">Ambulances</string>
    <string name="instructions_illustration">Instructions Illustration</string>
    <string name="basics_instructions">Basics Instructions</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="previous">Prev</string>
    <string name="get_started">Get Started</string>
    <string name="name_example">John Doe</string>
    <string name="phone_number_example">+254726515605</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_with">Login With</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="signup">SignUp</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="instruction_heading">Instruction Heading</string>
    <string name="instructions_text">Instructions text</string>
    <string name="onboarding_image_illustration">Onboarding image illustration</string>
</resources>