<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OnBoardingActivity">

        <Button
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:id="@+id/btn_onboarding_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:id="@+id/btn_onboarding_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:id="@+id/btn_onboarding_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryVariant"
            android:id="@+id/btn_onboarding_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/get_started"
            app:layout_constraintBottom_toTopOf="@+id/btn_onboarding_previous"
            app:layout_constraintEnd_toStartOf="@+id/btn_onboarding_next"
            app:layout_constraintStart_toEndOf="@+id/btn_onboarding_previous" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/layout_onboarding_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_onboarding_next"
            app:layout_constraintStart_toEndOf="@+id/btn_onboarding_previous"
            app:layout_constraintTop_toBottomOf="@+id/btn_onboarding_get_started">


        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager_onboarding"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_onboarding_get_started"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_onboarding_skip" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
