<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.crucialemergencyresponse.DashboardViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/dashboard_header"
                android:translationY="-16dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/muli_black"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/txt_dashboard_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/muli"
                android:padding="4dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                app:layout_constraintStart_toEndOf="@+id/circleImageView"
                app:layout_constraintTop_toTopOf="@+id/circleImageView"
                tools:text="UserName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/muli"
                android:padding="16dp"
                android:text="@string/dashboard_tag_line"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/dashboard_logo"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_mech_vector_wheel" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview_mechanics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toStartOf="@+id/cardview_towtrucks"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:strokeColor="@color/material_on_surface_stroke"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:contentDescription="mechanic illustration"
                        android:padding="4dp"
                        android:src="@drawable/ic_mechanics_illustration">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/muli_black"
                        android:text="@string/mechanics"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/muli"
                        android:textColor="@color/black"
                        app:availability="@{viewModel.mechanics}"
                        tools:text="20 Available">

                    </TextView>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview_towtrucks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardview_mechanics"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cardview_mechanics"
                app:layout_constraintTop_toTopOf="@+id/cardview_mechanics"
                app:strokeColor="@color/material_on_surface_stroke"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:contentDescription="Tow truck illustration"
                        android:padding="4dp"
                        android:src="@drawable/ic_tow_truck">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/muli_black"
                        android:text="Tow Trucks"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/muli"
                        android:textColor="@color/black"
                        app:availability="@{viewModel.towTrucks}"
                        tools:text="20 Available ">

                    </TextView>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_fuel_stations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/card_view_ambulances"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_mechanics"
                app:strokeColor="@color/material_on_surface_stroke"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:contentDescription="Fuel Station Illustration"
                        android:padding="4dp"
                        android:src="@drawable/ic_fuel_stations">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/muli_black"
                        android:text="Fuel Stations"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/muli"
                        android:textColor="@color/black"
                        app:availability="@{viewModel.fuelstations}"
                        tools:text="20 Available ">

                    </TextView>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_ambulances"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/card_view_fuel_stations"
                app:layout_constraintTop_toBottomOf="@+id/cardview_towtrucks"
                app:strokeColor="@color/material_on_surface_stroke"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:contentDescription="Ambulance Illustration"
                        android:src="@drawable/ic_ambulance">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/muli_black"
                        android:text="Ambulances"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/muli"
                        android:textColor="@color/black"
                        app:availability="@{viewModel.ambulances}"
                        tools:text="20 Available ">

                    </TextView>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_ambulances"
                app:strokeColor="@color/material_on_surface_stroke"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="Instructions Illustration"
                        android:src="@drawable/ic_manual">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/muli_black"
                        android:padding="8dp"
                        android:text="Basics Instructions"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp">

                    </TextView>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
